--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -22,7 +22,8 @@
       </div>
 
       <div class="sub-btn">
-        <button class="submit-btn" type="submit">Create Image</button>
+
+        <button class="btn btn-outline-success">Create Image</button>
       </div>
     </form>
   </div>
