--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -3,7 +3,10 @@
 <div class="background-container">
   <div class="gallery-container">
     <h2> Your private Library</h2>
-    <a class="library-link" href="/private/create">Create your own image</a>
+    <button type="button" class="btn btn-outline-secondary">
+      <a href="/private/create">Create your own image</a>
+    </button>
+
     <br />
     <br />
     <br />
@@ -17,7 +20,10 @@
     </div>
 
     <br />
-    <a class="library-link" href="/private-library">Go to Library</a>
+    <button type="button" class="btn btn-outline-secondary">
+      <a href="/private-library">Go to Library</a>
+    </button>
+
   </div>
 </div>
 
@@ -34,7 +40,10 @@
         /></a>
     </div>
     <br />
-    <a class="library-link" href="/favorites">Go to Library</a>
+    <button type="button" class="btn btn-outline-secondary">
+      <a href="/favorites">Go to Library</a>
+    </button>
+
   </div>
 </div>
 
