--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,4 +1,4 @@
-<div class="center-container">
+<div class="search-container">
   <form class="search-form" action="/library/search" method="post">
     <input type="text" placeholder="Search.." name="keyword" />
     <button class="search-btn" type="submit">Search</button>
