--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,5 @@
+@media (max-width: 767px) {
+}
 body {
   font: 14px Fragile Bombers;
   margin: 0;
@@ -327,4 +329,20 @@ a,
 }
 .nasa-logo {
   height: 80px;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .flex-container-column {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  .flex-container-row {
+    display: none;
+  }
+  .flex-container-column-day {
+    display: none;
+  }
+  .text-container {
+    display: none;
+  }
 }
