--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -11,7 +11,7 @@
       <h1>{{name}}</h1>
       {{#if image}}
         <a href="/private-library/{{_id}}">
-          <img src="{{image}}" alt={{title}} />
+          <img class="img-day" src="{{image}}" alt={{title}} />
         </a>
       {{/if}}
       <h3>{{description}}</h3>
