--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -346,3 +346,12 @@ a,
     display: none;
   }
 } */
+
+.error {
+  background: #f02b63;
+  box-sizing: border-box;
+  color: #fff;
+  margin: 20px auto;
+  padding: 20px;
+  width: 100%;
+}
