--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,55 +1,57 @@
 {{! <h1>Hello</h1> }}
+<div class="background-img">
+  <div class="background-container">
+    <div class="gallery-container">
+      <h2> Your private Library</h2>
+      <button type="button" class="btn btn-outline-secondary">
+        <a href="/private/create">Create your own image</a>
+      </button>
 
-<div class="background-container">
-  <div class="gallery-container">
-    <h2> Your private Library</h2>
-    <button type="button" class="btn btn-outline-secondary">
-      <a href="/private/create">Create your own image</a>
-    </button>
+      <br />
+      <br />
+      <br />
+      <div class="flex-container-column">
+        {{#if allImages.0.image}}
+          <a href="/private-library/{{allImages.0._id}}">
+            <img src="{{allImages.0.image}}" alt={{allImages.0.title}} />
+          </a>
+        {{/if}}
+        <h2>{{allImages.0.name}}</h2>
+      </div>
 
-    <br />
-    <br />
-    <br />
-    <div class="flex-container-column">
-      {{#if allImages.0.image}}
-        <a href="/private-library/{{allImages.0._id}}">
-          <img src="{{allImages.0.image}}" alt={{allImages.0.title}} />
-        </a>
-      {{/if}}
-      <h2>{{allImages.0.name}}</h2>
+      <br />
+      <button type="button" class="btn btn-outline-secondary">
+        <a href="/private-library">Go to Library</a>
+      </button>
+
     </div>
-
-    <br />
-    <button type="button" class="btn btn-outline-secondary">
-      <a href="/private-library">Go to Library</a>
-    </button>
-
   </div>
-</div>
 
-<div class="background-container">
-  <div class="gallery-container">
-    <h2> Your Favorites</h2>
+  <div class="background-container">
+    <div class="gallery-container">
+      <h2> Your Favorites</h2>
 
-    <div class="flex-container-column">
-      {{! do background image in a div}}
-      <a href="/favorites/{{favorites.data.0.nasa_id}}"><img
-          class="img-gallery"
-          src="{{favorites.links.0.href}}"
-          alt=""
-        /></a>
+      <div class="flex-container-column">
+        {{! do background image in a div}}
+        <a href="/favorites/{{favorites.data.0.nasa_id}}"><img
+            class="img-gallery"
+            src="{{favorites.links.0.href}}"
+            alt=""
+          /></a>
+      </div>
+      <br />
+      <button type="button" class="btn btn-outline-secondary">
+        <a href="/favorites">Go to Library</a>
+      </button>
+
     </div>
-    <br />
-    <button type="button" class="btn btn-outline-secondary">
-      <a href="/favorites">Go to Library</a>
-    </button>
-
   </div>
-</div>
 
-{{#if isAdmin}}
-  <a class="profile-btn" href="/admin">Private</a>
-{{/if}}
+  {{#if isAdmin}}
+    <a class="profile-btn" href="/admin">Private</a>
+  {{/if}}
+
+</div>
 
 {{! <div><img
     class="man-looking-stars"
