--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,6 +1,6 @@
 {{! <h1>Hello</h1> }}
 <div class="background-img">
-  <div class="background-container">
+  <div class="background-container-profile">
     <div class="gallery-container">
       <h2> Your private Library</h2>
       <button type="button" class="btn btn-outline-secondary">
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="background-container">
+  <div class="background-container-profile">
     <div class="gallery-container">
       <h2> Your Favorites</h2>
 
