--- a/views/private-page/edit-spaceImage.hbs
+++ b/views/private-page/edit-spaceImage.hbs
@@ -28,7 +28,7 @@
         </label></div>
 
       <div class="save-div">
-        <button class="save-img-btn" type="submit">Save Updated Image</button>
+        <button class="edit-btn" type="submit">Save Updated Image</button>
       </div>
 
     </form>
