--- a/views/private-page/new-space-image.hbs
+++ b/views/private-page/new-space-image.hbs
@@ -23,7 +23,7 @@
 
       <div class="sub-btn">
 
-        <button class="btn btn-outline-success">Create Image</button>
+        <button class="edit-btn">Create Image</button>
       </div>
     </form>
   </div>
