--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -1,6 +1,6 @@
 <div class="background-container">
   <h1>This is your private Library</h1>
-  <button type="button" class="btn btn-outline-secondary">
+  <button type="button" class="edit-btn">
     <a href="/private/create">Create a new image</a>
   </button>
 
