--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -3,7 +3,7 @@
   <div class="background-container-profile">
     <div class="gallery-container">
       <h2> Your private Library</h2>
-      <button type="button" class="btn btn-outline-secondary">
+      <button type="button" class="edit-btn">
         <a href="/private/create">Create your own image</a>
       </button>
 
