--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,13 +4,14 @@
   <div class="flex-container-column">
     <div class="flex-container-row">
       <div class="flex-container-column-day">
-        <h2> Picture Of the day</h2>
+        <h2 class="title"> Picture Of the day</h2>
+        {{! <div class="subtitle-container"> }}
         <h3 class="subtitle">Discover the cosmos!
           <br />
           Each day a different image or photograph of our fascinating universe
           is featured, along with a brief explanation written by a professional
-          astronomer.</h3>
-      </div>
+          astronomer.</h3></div>
+      {{! </div> }}
       <div class="flex-container-column-day">
         <img
           class="img-day"
@@ -19,7 +20,7 @@
           alt="Picture of the day"
         />
         <div class="text-container">
-          <h3>{{title}} <br /> {{date}}</h3>
+          <h2>{{title}} <br /> {{date}}</h2>
           <h3 class="img-description">{{explanation}}</h3>
         </div>
       </div>
