added link on moon img

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,9 @@
 
     <nav class="layout-nav">
       <div>
-        <img class="moon-logo" src="/images/moon2.webp" alt="moon" />
+        <a href="/">
+          <img class="moon-logo" src="/images/moon2.webp" alt="moon" /></a>
+
       </div>
       <div class="nav-links-container">
         <div class="container-layout">
