--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -23,7 +23,8 @@
     <nav class="layout-nav">
       <div>
         <a href="/">
-          <img class="moon-logo" src="/images/moon2.webp" alt="moon" /></a>
+          <img class="moon-logo" src="/images/moon2.webp" alt="moon" />Galaxy
+          Space</a>
 
       </div>
       <div class="nav-links-container">
