--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,12 +5,7 @@
     <div class="flex-container-row">
       <div class="flex-container-column-day">
         <h2 class="title"> Picture Of the day</h2>
-        {{! <div class="subtitle-container"> }}
-        <h3 class="subtitle">Discover the cosmos!
-          <br />
-          Each day a different image or photograph of our fascinating universe
-          is featured, along with a brief explanation written by a professional
-          astronomer.</h3></div>
+      </div>
       {{! </div> }}
       <div class="flex-container-column-day">
         <img
