--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,24 +6,23 @@
 @media (max-width: 767px) {
 }
 body {
-  font: 14px Helvetica, Arial, sans-serif;
+  font-family: Fragile Bombers;
   margin: 0;
   background-image: url("/images/stars-background.avif");
   color: rgb(255, 255, 255);
 }
 h1 {
-  font-family: Fragile Bombers;
   text-align: center;
   padding: 10px;
   color: rgb(255, 255, 255);
 }
 h2 {
-  font-family: Fragile Bombers;
   font-size: 40px;
   text-align: center;
   padding: 20px;
 }
 h3 {
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   font-size: 20px;
   padding: 20px;
@@ -76,7 +75,7 @@ h3 {
 /* general style */
 .background-container {
   align-items: center;
-  margin: 50px;
+  margin: 50px 50px 200px 50px;
   padding: 5px;
   text-align: center;
   background-color: rgb(33, 33, 33);
@@ -379,28 +378,33 @@ a,
 .nasa-logo {
   height: 80px;
 }
-/* 
-@media (min-width: 1300px) and (max-width: 1500px) {
-  .flex-container-column {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-  .flex-container-row {
-    display: none;
-  }
-  .flex-container-column-day {
-    display: none;
-  }
-  .text-container {
-    display: none;
-  }
-} */
 
 .error {
-  background: #f02b63;
+  background: rgba(109, 100, 132, 0.542);
   box-sizing: border-box;
   color: #fff;
   margin: 20px auto;
   padding: 20px;
   width: 100%;
+}
+
+/* create */
+.flex-container-create {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.create-input {
+  border: none;
+}
+.form-container label {
+  font-size: 18pt;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 50px;
 }
