added classes to input

--- a/views/Auth/login.hbs
+++ b/views/Auth/login.hbs
@@ -6,13 +6,20 @@
     <div class="login">
       <form action="/login" method="post">
         <input
+          class="input-style"
           type="username"
           name="username"
           value=""
           placeholder="Enter your username"
         />
-        <input type="password" name="password" value="" placeholder="******" />
-        <input type="submit" value="Log in" />
+        <input
+          class="input-style"
+          type="password"
+          name="password"
+          value=""
+          placeholder="******"
+        />
+        <input class="edit-btn" type="submit" value="Log in" />
       </form>
     </div>
   </div>
