--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,7 +1,7 @@
 <div class="search-container">
   <form class="search-form" action="/library/search" method="post">
-    <input type="text" placeholder="Search.." name="keyword" />
-    <button class="search-btn" type="submit">Search</button>
+    <input class="input-style-search" type="text" placeholder="Search.." name="keyword" />
+    <button class="edit-btn" type="submit">Search</button>
   </form>
 </div>
 
