--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -408,3 +408,11 @@ a,
   flex-wrap: wrap;
   padding: 50px;
 }
+
+.input-style {
+  border: none;
+}
+
+.input-style-search {
+  border: 1px solid rgb(62, 62, 62);
+}
