--- a/views/Auth/signup.hbs
+++ b/views/Auth/signup.hbs
@@ -7,6 +7,7 @@
 
       <form action="/signup" method="post">
         <input
+          class="input-style"
           type="username"
           name="username"
           value=""
@@ -14,6 +15,7 @@
           placeholder="Enter your username"
         />
         <input
+          class="input-style"
           type="password"
           name="password"
           value=""
@@ -21,7 +23,7 @@
           placeholder="******"
         />
 
-        <input type="submit" value="Signup" />
+        <input class="edit-btn" type="submit" value="Signup" />
         {{#if errorMessage}}
           <p class="error">{{errorMessage}}</p>
         {{/if}}
