--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,10 +31,15 @@
         <div class="container-layout">
           <a href="/">Home</a>
         </div>
+        <div class="container-layout">
+          <a href="/library">Nasa Image Library</a>
+        </div>
+        <div class="container-layout">
+          <a href="/Picture-of-the-day">Pictures of the Day</a>
+        </div>
         <div class="dropdown container-layout">
-          <span>Gallery</span>
+          <span>Galleries</span>
           <div class="dropdown-content">
-            <a href="/library">Nasa Image Library</a>
             <a href="/The-Sun">The Sun</a>
             <a href="/The-Moon">The Moon</a>
             <a href="/The-Venus">The Venus</a>
