--- a/views/curiosity.hbs
+++ b/views/curiosity.hbs
@@ -1,6 +1,7 @@
-<div class="background-container">
+  <h1 class="title">Mars Curiosity Images</h1>
+  <div class="background-container">
   <div class="gallery-container">
-   <h1>Mars Curiosity Images</h1>
+ 
     <div class="grid-container">
       {{#each marsPhotoData}}
       <div>
