--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -35,7 +35,7 @@
           <a href="/library">Nasa Image Library</a>
         </div>
         <div class="container-layout">
-          <a href="/Picture-of-the-day">Pictures of the Day</a>
+          <a href="/Picture-of-the-day">Old Pictures of the Day</a>
         </div>
         <div class="dropdown container-layout">
           <span>Galleries</span>
