--- a/views/library.hbs
+++ b/views/library.hbs
@@ -1,4 +1,6 @@
-<div class="search-container">
+  <h1 class="title">Nasa Image Library</h1>
+  
+  <div class="search-container">
   <form class="search-form" action="/library/search" method="post">
     <input class="input-style-search" type="text" placeholder="Search.." name="keyword" />
     <button class="edit-btn" type="submit">Search</button>
@@ -7,7 +9,7 @@
 
 <div class="background-container">
   <div class="gallery-container">
-        <h1>Nasa Image Library</h1>
+      
       <div class="grid-container">
        {{#each randomLibrary}}
         <div>
