--- a/views/private-page/favorites.hbs
+++ b/views/private-page/favorites.hbs
@@ -1,6 +1,6 @@
+<h1 class="title">Favorites</h1>
 <div class="background-container">
 
-  <h1>Favorites</h1>
   <div class="grid-container">
     {{#each favorites}}
       <div>
