--- a/views/private-page/private-library.hbs
+++ b/views/private-page/private-library.hbs
@@ -1,5 +1,5 @@
+<h1 class="title">This is your private Library</h1>
 <div class="background-container">
-  <h1>This is your private Library</h1>
 
   <br />
   <div class="flex-container">
