--- a/views/sun.hbs
+++ b/views/sun.hbs
@@ -1,6 +1,7 @@
-<div class="background-container">
+ <h1 class="title">The Sun</h1>
+ <div class="background-container">
   <div class="gallery-container">
-  <h1>The Sun</h1>
+ 
   <div class="grid-container">
     {{#each sunPhotoData}}
       <div>
