--- a/views/moon.hbs
+++ b/views/moon.hbs
@@ -1,6 +1,8 @@
-<div class="background-container">
+      <h1 class="title">The Moon</h1>
+      
+      <div class="background-container">
   <div class="gallery-container">
-      <h1>The Moon</h1>
+
       <div class="grid-container">
         {{#each moonPhotoData}}
         <div>
