--- a/views/private-page/edit-spaceImage.hbs
+++ b/views/private-page/edit-spaceImage.hbs
@@ -1,3 +1,6 @@
+<h2 class="title">
+  Edit the Image
+</h2>
 <div class="background-container">
   <div class="flex-container-column">
     <form
@@ -5,9 +8,7 @@
       action="/private-library/edit/{{spaceImage._id}}"
       method="post"
     >
-      <h2>
-        Edit the Image
-      </h2>
+
       <div class="form-container">
         <label>Name:
           <input type="text" name="name" value="{{spaceImage.name}}" />
