--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,8 +1,9 @@
 {{! <h1>Hello</h1> }}
+<h2 class="title"> Your private Library</h2>
 <div class="background-img">
   <div class="background-container-profile">
     <div class="gallery-container">
-      <h2> Your private Library</h2>
+
       <button type="button" class="edit-btn">
         <a href="/private/create">Create your own image</a>
       </button>
@@ -27,9 +28,9 @@
     </div>
   </div>
 
+  <h2 class="title"> Your Favorites</h2>
   <div class="background-container-profile">
     <div class="gallery-container">
-      <h2> Your Favorites</h2>
 
       <div class="flex-container-column">
         {{! do background image in a div}}
