--- a/views/venus.hbs
+++ b/views/venus.hbs
@@ -1,6 +1,7 @@
-<div class="background-container">
+    <h1 class="title">The Venus</h1>
+    <div class="background-container">
   <div class="gallery-container">
-    <h1>The Venus</h1>
+
     <div class="grid-container">
       {{#each venusPhotoData}}
        <div>
