added class to description

--- a/views/nasaImage-detail.hbs
+++ b/views/nasaImage-detail.hbs
@@ -11,7 +11,7 @@
     {{/if}}
 
     <div>
-      <h3>{{imageData.data.0.description}}</h3>
+      <h3 class="img-description">{{imageData.data.0.description}}</h3>
     </div>
   </div>
 </div>
