--- a/views/private-page/favorite-Imagedetail.hbs
+++ b/views/private-page/favorite-Imagedetail.hbs
@@ -3,7 +3,11 @@
 
   <div>
     {{#if imageData.links.0.href}}
-      <img src="{{imageData.links.0.href}}" alt={{imageData.data.0.title}} />
+      <img
+        class="img-detail"
+        src="{{imageData.links.0.href}}"
+        alt={{imageData.data.0.title}}
+      />
     {{/if}}
 
     <div>
