--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -34,9 +34,9 @@
 
       <div class="flex-container-column">
         {{! do background image in a div}}
-        <a href="/favorites/{{favorites.data.0.nasa_id}}"><img
+        <a href="/favorites"><img
             class="img-gallery"
-            src="{{favorites.links.0.href}}"
+            src="{{favorites.0.links.0.href}}"
             alt=""
           /></a>
       </div>
