changed admin link

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -56,7 +56,7 @@
               <a href="/favorites">Favorites</a>
               <a href="/private/create">Create new Image</a>
               {{#if isAdmin}}
-                <a class="profile-btn" href="/admin">Private</a>
+                <a class="profile-btn" href="/admin">Admin</a>
               {{/if}}
             </div>
           </div>
