--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,10 +39,10 @@ h3 {
 .background-img {
   top: 0;
   padding: 50px;
-  height: 100%;
+  height: 100hw;
   width: 100vw;
   background-size: cover;
-  background-image: url("/images/universe.jpg");
+  background-image: url("/images/stars.jpg");
   z-index: -1;
 }
 .moon-logo {
@@ -76,7 +76,7 @@ h3 {
 /* general style */
 .background-container {
   align-items: center;
-  margin: 50px 50px 200px 50px;
+  margin: 80px 50px 200px 50px;
   padding: 5px;
   text-align: center;
   background-color: rgb(33, 33, 33);
@@ -85,8 +85,8 @@ h3 {
     0 6px 20px 0 rgba(109, 100, 132, 0.542);
 }
 .background-container-profile {
-  align-items: center;
-  margin: 0 50px;
+  /* align-items: center; */
+  margin: 40 20 20 20px;
   padding: 5px;
   text-align: center;
   background-color: rgb(33, 33, 33);
@@ -94,6 +94,24 @@ h3 {
   box-shadow: 0 4px 8px 0 rgba(109, 100, 132, 0.542),
     0 6px 20px 0 rgba(109, 100, 132, 0.542);
 }
+
+.background-container-favorites {
+  /* align-items: center; */
+  margin: 40 20 20 20px;
+  padding: 5px;
+  text-align: center;
+  background-color: rgb(33, 33, 33);
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(109, 100, 132, 0.542),
+    0 6px 20px 0 rgba(109, 100, 132, 0.542);
+}
+.private-img {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.542), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
 .flex-container-column {
   display: flex;
   flex-direction: column;
@@ -123,10 +141,7 @@ h3 {
 .subtitle {
   width: 500px;
 }
-.library-link {
-  text-align: center;
-  color: blue;
-}
+
 .text-container {
   border-radius: 10px;
   margin: 20px 80px;
@@ -375,6 +390,9 @@ a,
   bottom: 0;
   position: fixed;
   width: 100%;
+}
+.footer-text {
+  font-family: Fragile Bombers;
 }
 .nasa-logo {
   height: 80px;
