--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,11 +1,8 @@
 {{! <h1>Hello</h1> }}
 <div class="background-img">
+  <h2> Welcome to your private Library</h2>
   <div class="background-container-profile">
     <div class="gallery-container">
-      <h2> Your private Library</h2>
-      <button type="button" class="edit-btn">
-        <a href="/private/create">Create your own image</a>
-      </button>
 
       <br />
       <br />
@@ -13,7 +10,11 @@
       <div class="flex-container-column">
         {{#if allImages.0.image}}
           <a href="/private-library/{{allImages.0._id}}">
-            <img src="{{allImages.0.image}}" alt={{allImages.0.title}} />
+            <img
+              class="private-img"
+              src="{{allImages.0.image}}"
+              alt={{allImages.0.title}}
+            />
           </a>
         {{/if}}
         <h2>{{allImages.0.name}}</h2>
@@ -25,15 +26,19 @@
       </button>
 
     </div>
+    <button type="button" class="edit-btn">
+      <a href="/private/create">Create your own image</a>
+    </button>
   </div>
 
-  <div class="background-container-profile">
+  <h2> Your Favorites</h2>
+  <div class="background-container-favorites">
     <div class="gallery-container">
-      <h2> Your Favorites</h2>
 
       <div class="flex-container-column">
         {{! do background image in a div}}
-        <a href="/favorites/{{favorites.data.0.nasa_id}}"><img
+        <a href="/favorites/{{favorites.data.0.nasa_id}}">
+          <img
             class="img-gallery"
             src="{{favorites.links.0.href}}"
             alt=""
@@ -46,15 +51,13 @@
 
     </div>
   </div>
-
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
   {{#if isAdmin}}
     <a class="profile-btn" href="/admin">Private</a>
   {{/if}}
 
 </div>
-
-{{! <div><img
-    class="man-looking-stars"
-    src="/images/man-looking-stars.jpeg"
-    alt="moon"
-  /></div> }}
