--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -85,7 +85,7 @@
       <div class="footer-container">
         <a href="https://www.nasa.gov/" target="_blank">
           <img class="nasa-logo" src="/images/nasa-logo.png" alt="" /></a>
-        <h3>NASA data provided by the :
+        <h3 class="footer-text">NASA data provided by the :
           <a href="https://api.nasa.gov/" target="_blank">NASA Open APIs</a>
           <br />
           Copyright 2023 NASA.</h3>
