--- a/views/private-page/profile.hbs
+++ b/views/private-page/profile.hbs
@@ -1,6 +1,7 @@
 {{! <h1>Hello</h1> }}
 <h2 class="title"> Your private Library</h2>
 <div class="background-img">
+  <h2> Welcome to your private Library</h2>
   <div class="background-container-profile">
     <div class="gallery-container">
 
@@ -14,7 +15,11 @@
       <div class="flex-container-column">
         {{#if allImages.0.image}}
           <a href="/private-library/{{allImages.0._id}}">
-            <img src="{{allImages.0.image}}" alt={{allImages.0.title}} />
+            <img
+              class="private-img"
+              src="{{allImages.0.image}}"
+              alt={{allImages.0.title}}
+            />
           </a>
         {{/if}}
         <h2>{{allImages.0.name}}</h2>
@@ -26,6 +31,9 @@
       </button>
 
     </div>
+    <button type="button" class="edit-btn">
+      <a href="/private/create">Create your own image</a>
+    </button>
   </div>
 
   <h2 class="title"> Your Favorites</h2>
@@ -47,15 +55,13 @@
 
     </div>
   </div>
-
+  <br />
+  <br />
+  <br />
+  <br />
+  <br />
   {{#if isAdmin}}
     <a class="profile-btn" href="/admin">Private</a>
   {{/if}}
 
 </div>
-
-{{! <div><img
-    class="man-looking-stars"
-    src="/images/man-looking-stars.jpeg"
-    alt="moon"
-  /></div> }}
